Add envrc and wheel

--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,6 @@
 if has nix; then
-    use flake .
+    # normally we'd `use flake .`
+    # this is in case our flake project isn't stored in git
+    use flake path:$(pwd)
 fi
 layout python
