--- a/.gitignore
+++ b/.gitignore
@@ -155,6 +155,6 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-# Direnv and Nix flakes
-.direnv
-flake.*
+
+
+.direnv/
