--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ requires-python = ">=3.9, <4"
 license = {file = "LICENSE.txt"}
 
 dependencies = [
+    "torch",
+    "pandas"
 ]
 
 
@@ -27,6 +29,7 @@ namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
 "Homepage" = "https://github.com/abdullin/bgn-python"
 
 [project.scripts]
+"main" = "nix_python.main:main"
 
 
 
