--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,13 @@ click==8.1.3
 Flask==2.2.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
+loguru==0.6.0
 MarkupSafe==2.1.2
 numpy==1.24.1
 pandas==1.5.3
 python-dateutil==2.8.2
 pytz==2022.7.1
 six==1.16.0
-torch==1.13.1
+torch==1.13.1+cpu
 typing_extensions==4.4.0
 Werkzeug==2.2.2
